name:                encryptichat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/encryptichat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable encryptichat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-exentions:     RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , network
                     , stm >= 2.3